--- a/InternWeb2/static/index.html
+++ b/InternWeb2/static/index.html
@@ -16,7 +16,7 @@
         }
 
         body {
-            background: url('static/Landing_page_img.gif');
+            background: url('Landing_page_img.gif');
             background-size: cover;
             background-repeat: no-repeat;
             color: white;
