--- a/InternWeb2/static/index.html
+++ b/InternWeb2/static/index.html
@@ -314,23 +314,23 @@
         // Join buttons (on main page)
         document.getElementById("internButton").addEventListener("click", function() {
             localStorage.setItem("userType", "intern");
-            window.location.href = "static/auth.html";
+            window.location.href = "auth.html";
         });
 
         document.getElementById("startupButton").addEventListener("click", function() {
             localStorage.setItem("userType", "startup");
-            window.location.href = "static/auth.html";
+            window.location.href = "auth.html";
         });
 
         // Join buttons (in modal)
         document.getElementById("signInInternBtn").addEventListener("click", function() {
             localStorage.setItem("userType", "intern");
-            window.location.href = "static/auth.html";
+            window.location.href = "auth.html";
         });
 
         document.getElementById("signInStartupBtn").addEventListener("click", function() {
             localStorage.setItem("userType", "startup");
-            window.location.href = "static/auth.html";
+            window.location.href = "auth.html";
         });
     </script>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
