--- a/InternWeb2/static/index.html
+++ b/InternWeb2/static/index.html
@@ -16,14 +16,13 @@
         }
 
         body {
-            background: url('Landing_page_img.gif');
+            background: url('https://i.makeagif.com/media/8-22-2015/hHIr5h.gif');
             background-size: cover;
             background-repeat: no-repeat;
             color: white;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            
         }
 
         .container {
