--- a/InternWeb2/static/select_role.html
+++ b/InternWeb2/static/select_role.html
@@ -14,100 +14,139 @@
         }
 
         body {
-            background: #f6f5f7;
+            background: #181C25;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
             height: 100vh;
             padding: 1rem;
+            color: #ffffff;
         }
 
         .container {
-            background-color: #ffffff;
+            background-color: #1E2330;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            padding: 2.5rem;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             width: 100%;
-            max-width: 500px;
+            max-width: 550px;
         }
 
         h1 {
-            font-weight: bold;
+            font-weight: 600;
             margin: 0;
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: #333;
+            font-size: 2rem;
+            margin-bottom: 0.5rem;
+            color: #F2A94F;
             text-align: center;
         }
 
         p {
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            margin: 1.25rem 0;
-            color: #666;
+            font-size: 1rem;
+            line-height: 1.5rem;
+            margin: 1rem 0 1.5rem;
+            color: #a0a0b0;
             text-align: center;
         }
 
         .role-buttons {
             display: flex;
-            gap: 1rem;
-            margin: 2rem 0;
+            gap: 1.5rem;
+            margin: 1.5rem 0;
             width: 100%;
         }
 
         .role-btn {
             flex: 1;
-            background-color: #fff;
-            border: 2px solid #ff4b2b;
-            color: #ff4b2b;
-            padding: 1.5rem;
+            background-color: #232838;
+            border: 2px solid #232838;
+            color: #ffffff;
+            padding: 1.75rem 1.25rem;
             border-radius: 10px;
             cursor: pointer;
-            font-weight: 600;
+            font-weight: 500;
             font-size: 1rem;
-            transition: all 0.2s;
+            transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.75rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .role-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, rgba(242, 169, 79, 0.1), transparent);
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .role-btn:hover {
-            background-color: #ff4b2b;
-            color: white;
+            border-color: #F2A94F;
+            transform: translateY(-5px);
+        }
+
+        .role-btn:hover::before {
+            opacity: 1;
         }
 
         .role-btn img {
-            width: 40px;
-            height: 40px;
+            width: 48px;
+            height: 48px;
+            transition: transform 0.3s ease;
+            filter: brightness(0.9) contrast(1.1);
+        }
+
+        .role-btn:hover img {
+            transform: scale(1.1);
         }
 
         .error-message {
-            color: #ff4b2b;
-            font-size: 0.8rem;
-            margin-top: 0.5rem;
+            color: #ff6b6b;
+            font-size: 0.9rem;
+            margin-top: 1rem;
             text-align: center;
         }
 
         .loading {
             display: none;
-            width: 20px;
-            height: 20px;
-            border: 2px solid #f3f3f3;
+            width: 24px;
+            height: 24px;
+            border: 3px solid rgba(242, 169, 79, 0.2);
             border-radius: 50%;
-            border-top: 2px solid #ff4b2b;
+            border-top: 3px solid #F2A94F;
             animation: spin 1s linear infinite;
-            margin: 0 auto;
+            margin: 0.5rem auto 0;
         }
 
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+
+        @media (max-width: 480px) {
+            .role-buttons {
+                flex-direction: column;
+            }
+            
+            h1 {
+                font-size: 1.75rem;
+            }
+            
+            .container {
+                padding: 2rem;
+            }
         }
     </style>
 </head>
